# stunning-enigma

./: .env  .gitignore  Cargo.toml  README.md  Roadmap.md  dev.db  plan.md
.sqlx/: query-0215bfeb7b99908e24ee466d46ab6d4929273a72ba906f2438d7810e34c18658.json  query-099f3f3b2067ddf4ea6a8c448455005f79d1588b48083f8864723bf1a5dd9c20.json  query-0ae35e37a3586abb8178d3e807489c1a90055678b284a62f0910a287a32935cb.json  query-36838f45510e3371d03b0816b9ce842477736775ece97d40c75f7767565a1b93.json  query-395db3f85969eb7d2ef17279ee55a44091da7ddffec615d6dcd555fe46ca6670.json  query-443945b81f76301a7b03898a23f57ec9723a635768920624f32af6c9ce3bc5a4.json  query-49ae0a0170920adfd3a16f9bee1d5f29585dc84b3735898ae3bd990fe9ebe55a.json  query-4e23346795ed5d9f4946ec8c625fecbba4fcb142c4172f322f229ec5fca0d44e.json  query-5c8862dc0d9d318971962229a1f4dc5a6f975bb15658815f67704b58f44ac933.json  query-77158d557a8b889098de0e1060cb21a170e4f275d87ae7bf6d5a36023d2ead7a.json  query-7d87df8c552de598b097d42728a3116769f95cd855a259e16a875af1e039c68f.json  query-98d361c4712fd7617a06e7a18cce4562772b8a83b31d8108ca8c929019459d43.json  query-bcd74ae779ae655be4a5f641320abf4ddf46f25b6c82fdfc12f7b7ee06a34b20.json  query-cb52d3e410acbb394b34315927237dc3e4c85b225ab24e31a95bb1e4f97446c7.json  query-d2126335335857fe97425eb1027d19c188854639e414db49c075a0048a939f3b.json  query-e0a1545286bfa4fc85fe05c114e877499a760ec19c333c4978522aaf922955e1.json  query-ef158231683aa6fcbcb66c90822f3250972f1c92a5e2f01540d17500a9b594e9.json  query-f2c043f80db92c89e344445fb54e5400eff0c34a3bf75df132a0382185cc7750.json
crates/deploy-engine/: Cargo.toml
crates/deploy-engine/src/: apply.rs  conflict.rs  lib.rs  plan.rs
crates/domain-core/: Cargo.toml
crates/domain-core/src/: entities.rs  error.rs  lib.rs
crates/game-detect/: Cargo.toml
crates/game-detect/src/: lib.rs  steam.rs  validate.rs
crates/ipc-api/: Cargo.toml
crates/ipc-api/src/: lib.rs
crates/launch-engine/: Cargo.toml
crates/launch-engine/src/: lib.rs
crates/loot-engine/: Cargo.toml
crates/loot-engine/src/: lib.rs
crates/mm-daemon/: Cargo.toml
crates/mm-daemon/src/: main.rs  profile_fs.rs
crates/mod-ingest/: Cargo.toml
crates/mod-ingest/src/: archive.rs  fomod.rs  hasher.rs  ingest.rs  lib.rs
crates/plugins-engine/: Cargo.toml
crates/plugins-engine/src/: lib.rs  load_order.rs  parser.rs  validate.rs
crates/runner-manager/: Cargo.toml
crates/runner-manager/src/: lib.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/migrations/: 0001_initial.sql  0002_plugin_masters.sql  0003_profile_env_vars.sql
crates/storage-sqlite/src/: instance_repo.rs  lib.rs  migrations.rs  profile_env_repo.rs  profile_mod_repo.rs  profile_plugin_repo.rs  profile_repo.rs
scratchpad/: compile_code.py  llm_codebase_context.md
ui/kirigami-app/: CMakeLists.txt
ui/kirigami-app/src/: Main.qml  ProfileSettingsDialog.qml  ipc_client.cpp  ipc_client.h  main.cpp
