[workspace]
resolver = "2"
members = [
    "crates/domain-core",
    "crates/storage-sqlite",
    "crates/game-detect",
    "crates/runner-manager",
    "crates/mod-ingest",
    "crates/deploy-engine",
    "crates/plugins-engine",
    "crates/loot-engine",
    "crates/launch-engine",
    "crates/ipc-api",
    "crates/mm-daemon",
]

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
thiserror          = "1"
sqlx               = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }
keyvalues-parser   = "0.2"
sha2               = "0.11"
hex                = "0.4"
sevenz-rust2       = "0.21"
zip                = "8"
rar                = "0.4"
walkdir            = "2"
fomod-oxide        = "0.1.0"
libloot            = "0.29.5"

domain-core        = { path = "crates/domain-core" }
storage-sqlite     = { path = "crates/storage-sqlite" }
game-detect        = { path = "crates/game-detect" }
runner-manager     = { path = "crates/runner-manager" }
mod-ingest         = { path = "crates/mod-ingest" }
deploy-engine      = { path = "crates/deploy-engine" }
plugins-engine     = { path = "crates/plugins-engine" }
loot-engine        = { path = "crates/loot-engine" }
launch-engine      = { path = "crates/launch-engine" }
ipc-api            = { path = "crates/ipc-api" }