[package]
name = "deploy-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
domain-core    = { workspace = true }
storage-sqlite = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
walkdir        = { workspace = true }
sqlx           = { workspace = true }