[package]
name = "game-detect"
version = "0.1.0"
edition = "2024"

[dependencies]
domain-core      = { path = "../domain-core" }
anyhow           = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
tokio            = { workspace = true }
keyvalues-parser = { workspace = true }