[package]
name    = "mm-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
domain-core        = { path = "../domain-core" }
storage-sqlite     = { path = "../storage-sqlite" }
game-detect        = { path = "../game-detect" }
runner-manager     = { path = "../runner-manager" }
mod-ingest         = { path = "../mod-ingest" }
deploy-engine      = { path = "../deploy-engine" }
ipc-api            = { path = "../ipc-api" }
plugins-engine     = { path = "../plugins-engine" }
loot-engine        = { path = "../loot-engine" }
launch-engine      = { path = "../launch-engine" }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
serde_json         = { workspace = true }
serde              = { workspace = true }