[package]
name    = "mm-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
domain-core        = { workspace = true }
storage-sqlite     = { workspace = true }
game-detect        = { workspace = true }
runner-manager     = { workspace = true }
mod-ingest         = { workspace = true }
deploy-engine      = { workspace = true }
ipc-api            = { workspace = true }
plugins-engine     = { workspace = true }
loot-engine        = { workspace = true }
launch-engine      = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
serde_json         = { workspace = true }
serde              = { workspace = true }